# LFS_FPNav_Plugin

./: FPN_settings.json  README.md  __init__.py  fpnav_estimate_numpad.py  keymaps.py  pyproject.toml  settings.json  settings.py
operators/: __init__.py  nav_ops.py
panels/: nav_panel.py  nav_panel.rml
