[project]
name = "FP_Navigation"
version = "0.1.0"
description = "First-person ← → arrow key navigation for LichtFeld Studio viewports"
authors = [{ name = "Brian Davis - bb6" }]
dependencies = []

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.4.2"
required_features = []
